feat: add scraper to take all drugs and packages
